--- a/solid-no-bun/playground/vite-solid/src/index.css
+++ b/solid-no-bun/playground/vite-solid/src/index.css
@@ -25,8 +25,10 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
   min-height: 100vh;
 }
 
